first portfolio commit

--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Navbar -->
@@ -25,8 +25,8 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero-text">
-      <h1>Sanika Patil</h1>
-      <p>"Hi, I’m Sanika, a final-year B.Sc. Computer Science student passionate about coding and problem-solving."</p>
+      <h1>sanika patil</h1>
+      <p>Student | Aspiring Web Developer.</p>
       <a href="#" class="btn">Hire Me</a>
     </div>
     <div class="hero-img">
@@ -38,10 +38,7 @@
   <section class="about">
     <h2>About Me</h2>
     <p>
-        I am passionate about building projects that improve my coding skills and demonstrate my 
-    knowledge. My goal is to pursue a career in <strong>software development</strong> 
-    where I can continue to learn and grow.
-    </p>
+      Hello! I am a Computer Science student passionate about web development, programming, and learning new technologies</p>
     <a href="#" class="btn">Download Resume</a>
   </section>
  <!-- Skills Section -->
@@ -71,7 +68,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 sanika patil. All rights reserved.</p>
+    <p>&copy; 2025 Your Name. All rights reserved.</p>
   </footer>
 
 
